# ROI2nix

./: .gitignore  Dockerfile  README.md  ROI2nii.py  Test.py  manifest.json  pyproject.toml  pyproject.toml.bk  requirements.txt  run.py  utils.py
tests/: Dockerfile  full_test.py  setup_data.py
tests/integration_tests/: test_MeasurementExporter.py
tests/test_data/metadata/: test_ohif_info.json  test_processed_ohif_info.json
tests/unit_tests/: test_Collector.py  test_Converters.py  test_Creators.py  test_Preppers.py
upload/: manifest.json
utils/: ExportRois.py  Labels.py  MeasurementExporter.py  parser.py  roi_tools.py  utils.py
utils/SlicerScripts/: RunSlicerExport.py  SlicerTest.py  Slicer_Export.py  setup_slicer_env.sh
utils/objects/: Conversion.py  Files.py  Labels.py
utils/workers/: Collectors.py  Converters.py  Creators.py  Preppers.py
